# hs-multivac

./: .gitignore  README.md  hs-multivac.cabal
Multivac-1.10.1/: M.cpp  M.pts  M_fast.cpp  M_lax_friedrichs.cpp  SConstruct  errors.hxx  gui.py  image.cfg  image.cpp  includes.hxx  makefile  merge_and_island.cpp  multivac.hxx  nodes.cxx  nodes.hxx  piecewise_constant.cpp  simulator.cxx  track.cpp  track_eno2_eo.cpp  track_extension.cpp
Multivac-1.10.1/geometry/: arrayheap.cxx  arrayheap.hxx  curve.cxx  curve.hxx  functions.cxx  list.hxx
Multivac-1.10.1/includes/: errors.cxx  errors.hxx  includes.hxx  multivac.hxx  simulator.hxx  version
Multivac-1.10.1/includes/geometry/: arrayheap.hxx  list.cxx
Multivac-1.10.1/includes/initialcurves/: baseclass.cxx  circle.cxx  island.cxx  island0.hxx  setofpoints.hxx
Multivac-1.10.1/includes/initializers/: baseclass.hxx  narrowbandextension.cxx  narrowbandextension.hxx
Multivac-1.10.1/includes/levelsets/: baseclass.hxx  orthogonal.cxx  orthogonal.hxx
Multivac-1.10.1/includes/meshes/: baseclass.cxx  baseclass.hxx
Multivac-1.10.1/includes/savers/: baseclass.cxx  baseclass.hxx  neversave.hxx  saveattheend.cxx  savelastcurve.hxx
Multivac-1.10.1/includes/seldon/: version
Multivac-1.10.1/includes/speedfunctions/: baseclass.hxx  constantspeed.cxx  firemodel.hxx  (+1 more)
Multivac-1.10.1/initialcurves/: baseclass.hxx  circle.hxx  island.hxx  island0.cxx  setofpoints.cxx  threecircles.cxx  threecircles.hxx  twocircles.cxx  twocircles.hxx
Multivac-1.10.1/initializers/: baseclass.cxx  fastmarchingneverinit.cxx  fastmarchingneverinit.hxx  narrowbandneverinit.cxx  narrowbandneverinit.hxx
Multivac-1.10.1/levelsets/: baseclass.cxx
Multivac-1.10.1/meshes/: orthogonal.cxx  orthogonal.hxx
Multivac-1.10.1/savers/: curvessaver.cxx  curvessaver.hxx  neversave.cxx  saveattheend.hxx  savelastcurve.cxx  track.cxx  track.hxx
Multivac-1.10.1/seldon/: Seldon.hxx  test.cpp  test_Blas.cpp
Multivac-1.10.1/speedfunctions/: baseclass.cxx  constantspeed.hxx  firemodel.cxx  gradientsegmentation.cxx  gradientsegmentation.hxx  imageintensity.cxx  imageintensity.hxx  piecewiseconstantspeed.cxx  simplifiedfiremodel.cxx  simplifiedfiremodel.hxx
Multivac-1.10.1/talos/: Date.cxx  Files.hxx  String.cxx  String.hxx  Talos.hxx  history
Multivac-1.10.1/updaters/: chanvese.hxx  fastmarchingfirstorderengquistosher.cxx  fastmarchingfirstorderengquistosher.hxx  narrowbandeno2engquistosher.cxx  narrowbandfirstorderengquistosher.cxx
cbits/: cbits.cpp  cbits.h  hserror.hpp  hserror.hxx  memorysaver.hxx  speedcallback.cpp  speedcallback.hpp
src/: Multivac.chs  Point.hs
(+62 files in other folders)
